--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,15 @@
 
 buildscript {
     repositories {
-        google()
         jcenter()
-        
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
-        
+        classpath 'com.android.tools.build:gradle:3.1.4'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,12 +18,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
-        
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
